# modern-cpp-features

./: CMakeLists.txt  Notes.md  README copy.md  README.md  auto-generate-readme.py  generate.sh  rebuild.sh
include/: headers.h
src/: 01_01_template_type_deduction.cpp  01_02_deduction_paramtypes.cpp  01_03_universal_deduction.cpp  02_01_auto_declaration.cpp  02_02_initializer_list.cpp  03_01_decltype.cpp  03_02_deque.cpp  03_03_autodecltype.cpp  03_04_autodecltype_expression.cpp  03_05_universal_reference.cpp  03_06_std_ref.cpp  04_01_type_name.cpp  05_01_auto_types.cpp  05_02_bool_reference.cpp  07_01_intialise_vector.cpp  08_01_nullptr.cpp  09_01_alias_declaration.cpp  09_02_type_traits.cpp  10_scoped_enums.cpp  12_01_reference_qualifier.cpp  14_01_noexcept.cpp  15_01_constexpr.cpp  16_01_copy_mutex.cpp  16_02_atomic.cpp  17_01_default_argument_const.cpp  17_02_virtual_destructor.cpp  17_03_inline.cpp  17_04_all_rules.cpp  17_05_operator_generations.cpp  18_01_unique_pointers.cpp  19_01_shared_pointer.cpp  19_02_shared_from_this.cpp  19_03_sharing_pointers.cpp  20_01_weak_pointers.cpp  22_01_static_assert.cpp  24_01_basic_universal.cpp  26_01_template_constructor.cpp  31_01_basic_lambda.cpp  31_02_capture_modes.cpp  31_03_init_capture.cpp  (+6 more)
src/concepts/: c_01_lrvalues.cpp  c_03_move_forward.cpp  c_04_terminate.cpp  c_05_noexcept.cpp  c_06_ref_functions.cpp  c_07_iterator_invalidation.cpp  c_08_variadic_templates.cpp  c_09_deprecated_attribute.cpp  c_10_parameter_pack.cpp  c_11_template_mp.cpp
